--- a/samples/awsSecrets/data/usr/config.yaml
+++ b/samples/awsSecrets/data/usr/config.yaml
@@ -4,4 +4,4 @@ secrets_manager:
     aws_region: ap-southeast-2
 
 setting:
-  test: AWS_Secret#SEC01/SecretsManager/Utilities#test_secret
+  test: <USR>/Utilities#test_secretgg
